<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="clear_search">Очистить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history_title">Вы искали</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_license">Пользовательское соглашение</string>
    <string name="search_activity">Search activity</string>
    <string name="mediateka_activity">Mediateka activity</string>
    <!-- strings for player activity -->
    <string name="back">Назад</string>
    <string name="play_pause">Играть / пауза</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favorite">Добавить в избранное</string>
    <string name="track_time">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="track_poster">Обложка трека</string>
    <string name="zero_time">00:00</string>
    <string name="track_exist">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added">Добавлено в плейлист  %1$s</string>
    <!-- strings for favorites fragment -->
    <string name="favorites">Избранные треки</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <!-- strings for playlists fragment -->
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <!-- strings for playlist fragment -->
    <string name="minutes_end">%1$d минут</string>
    <string name="del_track_title">Удалить трек</string>
    <string name="del_track_text">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="del_track_confirm">Удалить</string>
    <string name="del_track_cancel">Отмена</string>
    <string name="del_pl_title">Удалить плейлист</string>
    <string name="del_pl_text">Хотите удалить плейлист?</string>
    <string name="del_pl_confirm">Да</string>
    <string name="del_pl_cancel">Нет</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <!-- strings for add playlist fragment -->
    <string name="empty_playlist">В плейлисте нет треков</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="del_playlist">Удалить плейлист</string>
    <!-- strings for add playlists fragment -->
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_text">Все несохраненные данные будут потеряны</string>
    <string name="dialog_ok">Завершить</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="image_select">Выбрать обложку</string>
    <string name="image_empty">Необходимо выбрать изображение</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <!-- strings for edit playlists fragment -->
    <string name="edit_title">Редактировать</string>
    <string name="save_btn">Сохранить</string>
    <string name="playlist_edited">Плейлист %1$s изменён</string>
    <!-- strings for support contact e-mail, user license and share btn -->
    <string name="support_adress">mailto:SerjeIDZ@yandex.ru</string>
    <string name="support_subject">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_text">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_license_URL">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_text">Для ознакомления с курсом Андроид-разработка от Яндекс Практикум перейдите по ссылке https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <!-- Strings for placeholders no internet / no results in search activity -->
    <string name="no_results">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="refresh">Обновить</string>
</resources>