<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <TextView
        android:id="@+id/tvGoBack"
        style="@style/titleWithBack"
        android:text="@string/settings" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchDarkTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/ys_display_regular"
        android:paddingHorizontal="@dimen/big_padding"
        android:paddingVertical="@dimen/biggest_padding"
        android:text="@string/dark_theme"
        android:textFontWeight="@integer/text_weight_400"
        android:textSize="@dimen/items_text_size"
        app:thumbTint="@color/switch_thumb_selector"
        app:trackTint="@color/switch_track_selector" />

    <FrameLayout
        android:id="@+id/frameShareApp"
        style="@style/settingsFrameLayout">

        <TextView
            style="@style/settingsTextView"
            android:text="@string/share_app" />

        <ImageView
            style="@style/settingsImageView"
            android:contentDescription="@string/share_app"
            android:src="@drawable/share"
            tools:ignore="ImageContrastCheck" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameSupportContact"
        style="@style/settingsFrameLayout">

        <TextView
            style="@style/settingsTextView"
            android:text="@string/write_to_support" />

        <ImageView
            style="@style/settingsImageView"
            android:contentDescription="@string/write_to_support"
            android:src="@drawable/support"
            tools:ignore="ImageContrastCheck" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameUserLicense"
        style="@style/settingsFrameLayout">

        <TextView
            style="@style/settingsTextView"
            android:text="@string/user_license" />

        <ImageView
            style="@style/settingsImageView"
            android:contentDescription="@string/user_license"
            android:src="@drawable/arrow_forward"
            tools:ignore="ImageContrastCheck" />

    </FrameLayout>

</LinearLayout>