<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <TextView
        android:id="@+id/tvGoBack"
        style="@style/titleWithBack"
        android:drawablePadding="@dimen/medium_padding"
        android:text="@string/new_playlist"
        app:drawableStartCompat="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPoster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin24"
        android:layout_marginTop="@dimen/margin30"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGoBack">

        <ImageView
            android:id="@+id/ivSelectImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/stroke_rectangle"
            android:clickable="true"
            android:contentDescription="@string/image_select"
            android:scaleType="centerInside"
            android:src="@drawable/add_photo" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/TextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin16"
        android:layout_marginTop="@dimen/margin30"
        android:elevation="0dp"
        android:hint="@string/title"
        app:layout_constraintTop_toBottomOf="@+id/cvPoster">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            style="@style/TextEditStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ellipsize="end" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        style="@style/TextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            style="@style/TextEditStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="@dimen/margin16"
        android:layout_marginBottom="@dimen/margin32"
        android:enabled="false"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>