<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/small_padding"
        android:paddingTop="@dimen/medium_padding"
        android:paddingBottom="@dimen/big_padding"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:layout_marginVertical="@dimen/smallest_padding"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btnMediateka"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:layout_marginVertical="@dimen/smallest_padding"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/mediateka"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/mediateka"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:layout_marginTop="@dimen/smallest_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:onClick="btnSettingsOnClick"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />
</LinearLayout>